...
    <fragment
        android:id="@+id/typingSettingsFragment"
        android:name="wtf.uhoh.newsoftkeyboard.app.ui.settings.TypingSettingsFragment"
        android:label="@string/settings_category_typing" />

    <fragment
        android:id="@+id/lookAndFeelSettingsFragment"
        android:name="wtf.uhoh.newsoftkeyboard.app.ui.settings.LookAndFeelSettingsFragment"
        android:label="@string/settings_category_look_and_feel" />

    <fragment
        android:id="@+id/gesturesAndQuickKeysSettingsFragment"
        android:name="wtf.uhoh.newsoftkeyboard.app.ui.settings.GesturesAndQuickKeysSettingsFragment"
...
